--- a/list/css/list.css
+++ b/list/css/list.css
@@ -9,6 +9,10 @@
 .a1 a:link{
 	color:red;
 }
+.a1{
+	height: 175px;
+	width: 
+}
 .phantu2 a{
 	padding-left: 15px;
 	padding-right: 15px;
@@ -16,16 +20,15 @@
 }
 .a3 a{
 	color: #c0e0c0;
-	padding-left: 10px;
-	padding-right: 10px;
+	padding-left: 20px;
+	padding-right: 20px;
 	float: left;
 }
-.a4{
-	position: absolute;
-	width: 300px;
-	height: 300px;
-	right: 800px;
-	top: -68px;
+.d1{
+	    position: relative;
+    top: 50px;
+    text-align: center;
+    color: red;
 }
 .a5{
 	background: gray;
@@ -34,10 +37,11 @@
 	float: right;
 }
 .a7{
-	position: absolute;
-	right: 181px;
+	position: relative;
 	width: 20px;
-	height: 20px;
+    height: 21px;
+    top: 6px;
+    left: 3px;
 
 }
 .a9{
@@ -49,4 +53,17 @@
 .b1{
 	position: absolute;
 	float: right;
+}
+}
+.full-screen {
+	width: 100%;
+}
+.text-center {
+	text-align: center;
+}
+.martop-10 {
+	height: 100%;
+	width: 100%;
+	margin-top: 10px;
+	
 }
