--- a/list/css/sp.css
+++ b/list/css/sp.css
@@ -28,6 +28,7 @@ height: 30px;
 background-color: #b32017;
 }
 #thanhngang p{
+    font-family: Lucida Console;
 text-align: center;
 font-size: 22px;
 color: white;
