--- a/jquery-card/HTml/card.css
+++ b/jquery-card/HTml/card.css
@@ -16,27 +16,21 @@ img{
 	border: 5px solid;
 }
 
-/*#boss a .hover1 {
-	transform:rotateY(180deg);
-}
-#boss a .hover1:hover {
-	
-	transform:rotateX(0deg);
-}
-.hover2:hover{
+#boss a img{
 	transform:rotateY(0deg);
 }
-#boss > a >.hover1{
+#boss a img:active{
+	
+	transform:rotateY(180deg);
+}
+#boss > a >img{
 	transition:all 1s;
 	
-}*/
+}
 #boss{
 	text-align: center;
 	border: 2px solid red;
 }
-#boss{
+/*#boss{
 	background-image: url(../image/naruto.jpg);
-}
-/*#boss a .hover1.choosed:hover {
-	transform:rotateY(180deg);
 }*/
