--- a/list/css/sp.css
+++ b/list/css/sp.css
@@ -1,35 +1,19 @@
-#s1{
+body {
+    font-family: 'Open Sans', sans-serif;
+}
+.d2 img{
+width: 300px;
+height: 300px;
+}
+.d2{
 	width: 100%;
-	height: 200px;
-	background-image: url("../images/17rd.jpg" );
-	border: 5px solid;
-
-}
-#s2 {
-	position: absolute;
-	left: 150px;
-	width: 1000px;
-	height: 50px;
+	height: 100%;
 	text-align: center;
-	font-size: 25px;
-	border-top: 2px solid #80772d;
-	border-bottom: 2px solid #80772d;
 }
-#s2 td a{
-	text-decoration: none; 
-	color: blue;
-	
+a:hover {
+    text-decoration: none;
 }
-#thanhngang{
-	    position: relative;
-    top: 32px;
-width: 100%;
-height: 30px;
-background-color: #b32017;
-}
-#thanhngang p{
-    font-family: Lucida Console;
-text-align: center;
-font-size: 22px;
-color: white;
+.dmsp0{
+	text-align: center;
+	font-size: 45px;
 }
