--- a/login/gogin.css
+++ b/login/gogin.css
@@ -1,67 +1,33 @@
-
-form {
-  box-sizing: border-box;
-  width: 300px;
-  margin: 50px auto 0;
-  box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.2);
-  padding-bottom: 40px;
-  border-radius: 3px;
-}
-form h2 {
-  box-sizing: border-box;
-  padding: 20px;
-}
- 
-#name1, #email , #pass, #dangnhap, #diachi, #phone, #dte, select {
-  margin: 0px 25px;
-  width: 250px;
-  display: block;
-  border: none;
-  padding: 10px 0;
-  border-bottom: solid 2px #1abc9c;
-  transition: all 0.3s cubic-bezier(0.64, 0.09, 0.08, 1);
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 96%, #1abc9c 4%);
-  background-position: -200px 0;
-  background-size: 200px 100%;
-  background-repeat: no-repeat;
-  color: #0e6252;
-}
-input:focus, input:valid {
-  box-shadow: none;
-  outline: none;
-  background-position: 0 0;
-}
-input:focus::-webkit-input-placeholder, input:valid::-webkit-input-placeholder {
-  color: #1abc9c;
-  font-size: 15px;
-  transform: translateY(-20px);
-  visibility: visible !important;
-}
- 
-button {
-  border: none;
-  background: #1abc9c;
-  cursor: pointer;
-  border-radius: 3px;
-  padding: 6px;
-  width: 200px;
-  color: white;
-  margin-left: 50px;
-  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
-}
-button:hover {
-  transform: translateY(-3px); 
-  box-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.2);
-}
-.long{
-      padding-left: 85px;
-}
-.error{
-  margin: 40px 25px;
-    width: 250px;
-}
-h1{
+body{
   text-align: center;
-  font-size: 35px;
-  color: #529494;
+      background-color: #c5b6bb;
+}
+h2{
+      background-color: blue;
+      color: white  !important;
+          margin: 0 0 20;
+              padding: 10px;
+          font-size: 30px;
+}
+#boss{
+      background-color: white;
+      width: 550px;
+    height: auto;
+    position: absolute;
+    left: 30%;
+
+    border: 2px solid gray;
+
+}
+.same{
+  width: 500px;
+  height: 40px;
+      border: 2px solid gray;
+}
+label{
+  font-size: 20px;
+}
+button{
+  width: 200px;
+  height: 30px;
 }
