--- a/list/css/sp.css
+++ b/list/css/sp.css
@@ -2,8 +2,8 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 .d2 img{
-width: 300px;
-height: 300px;
+width: 200px;
+height: 200px;
 }
 .d2{
 	width: 100%;
@@ -16,4 +16,21 @@ a:hover {
 .dmsp0{
 	text-align: center;
 	font-size: 45px;
+}
+.dmsp1{
+	text-align: center;
+}
+.hot{
+	position: absolute;
+	width: 50px	!important;
+	height: 50px !important;
+}
+#thanhngang::after { 
+    content: "";
+        top: 70px;
+    height: 2px;
+    width: 180px;
+    background: #b32017;
+    margin: 20px auto;
+    display: block;
 }
