--- a/list/css/sp.css
+++ b/list/css/sp.css
@@ -1,24 +1,31 @@
 body {
     font-family: 'Open Sans', sans-serif;
 }
-/*.dodai {
-	border: 2px solid red;
-}*/
-.d2 img{
+.dodai {
+	text-align: center;
+}
+.dodai img{
     width: 250px;
     height: 310px;
 }
-.d2{
-	width: 100%;
-	height: 100%;
+.table{
+	display: table;
+}
+.table p{
 	text-align: center;
+}
+.table div{
+	display: table-cell;
+	border: 2px solid white;
+}
+.table div:hover{
+	border: 2px solid red;
 }
 a:hover {
     text-decoration: none;
 }
 .dmsp0{
 	text-align: center;
-	font-size: 45px;
 }
 .dmsp1{
 	text-align: center;
@@ -43,4 +50,20 @@ a:hover {
 body{
 	padding-right: 0px !important;
 	overflow: scroll !important;
+}
+#dmsp1{
+	position: relative;
+	 text-align: center;
+    height:auto;
+    padding:10px;
+    margin:0 auto;
+}
+#dmsp1 img{  
+  border: 30px solid #a9a0a0;
+}
+.item-thumb{
+	text-align: center;
+}
+.item-thumb img{
+	    overflow: hidden;
 }
